fix alignment issues

--- a/src/app/dashboard/dashboard-item/dashboard-item.component.scss
+++ b/src/app/dashboard/dashboard-item/dashboard-item.component.scss
@@ -28,7 +28,7 @@
 }
 
 .dashboard-item .title {
-  font-size: 3vw;
+  font-size: 2.6vw;
 }
 .dashboard-item .body {
   font-size: 11vw;
